--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
 <p class="p1"><span class="s1">{% endif %} {{ content }} {% if page.after-content %}</span></p>
 <p class="p1"><span class="s1">{% for file in page.after-content %} {% include {{ file }} %} {% endfor %}<span class="Apple-converted-space"> </span></span></p>
 <p class="p1"><span class="s1">{% endif %}<span class="Apple-converted-space"> </span></span></p>
-<p class="p1"><span class="s1">&lt;script src=”https://polyfill.io/v3/polyfill.min.js?features=es6"&gt;&lt;/script&gt; &lt;script id=”MathJax-script” async src=”https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"&gt;&lt;/script&gt;</span></p>
+<p class="p1"><span class="s1">&lt;script src=”https://polyfill.io/v3/polyfill.min.js?features=es6"&gt;&lt;/script&gt;<span class="Apple-converted-space"> </span></span></p>
+<p class="p1"><span class="s1">&lt;script id=”MathJax-script” async src=”https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"&gt;&lt;/script&gt;</span></p>
 </body>
 </html>
